# image-png

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  README.md  fuzzit.sh
.cargo/: config.toml
.github/workflows/: cifuzz.yml  rust.yml
benches/: decoder.rs  expand_paletted.rs  filter.rs  next_frame_info.rs  unfilter.rs
examples/: change-png-info.rs  corpus-bench.rs  pngcheck.rs  show.rs  unfilter_testbench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: buf_independent.rs  decode.rs  roundtrip.rs
inflate/src/: lib.rs
src/: adam7.rs  benchable_apis.rs  chunk new.rs  chunk.rs  common.rs  crc.rs  encoder.rs  filter.rs  inflate.rs  inflate_zlib.rs  lib.rs  test_utils.rs  text_metadata.rs  traits.rs  utils.rs
src/decoder/: input.rs  interlace_info.rs  mod.rs  read_decoder.rs  stream.rs  transform.rs  unfiltering_buffer.rs  zlib.rs
src/decoder/transform/: palette.rs
src/encoder/: animation.rs  image.rs
src/filter/: mod.rs  paeth.rs  simd.rs
tests/: bugfixes.rs  check_testimages.rs  limit_buf_read.rs  partial_decode.rs  results.txt  results_alpha.txt  results_identity.txt
tests/benches/: README.md
