[package]
authors = ["nwin <nwin@users.noreply.github.com>"]
description = "PNG decoding and encoding library in pure Rust"
exclude = ["tests/*"]
license = "MIT/Apache-2.0"
name = "png"
repository = "https://github.com/PistonDevelopers/image-png.git"
version = "0.13.2"
[dependencies]
bitflags = "1.0"
image-core = { git = "https://github.com/image-rs/image-core" }
inflate = "0.4.2"
num-iter = "0.1.32"

[dependencies.deflate]
optional = true
version = "0.7.2"

[dev-dependencies]
getopts = "0.2.14"
glob = "0.2.11"
rand = "0.5.5"
term = "0.4"

[dev-dependencies.glium]
default-features = false
features = ["glutin"]
version = "0.22"

[features]
default = ["png-encoding"]
png-encoding = ["deflate"]
unstable = []
